# ilab-group-12-1-fall-detection

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  changelog.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
app/: app.py  app_2.py
app/models/: label_encoder.pkl  scaler.pkl
app/samples/: full_trace_subject17_trial3.csv
backend/: .env.example  Dockerfile  README.md  composer.json  setup.sh
backend/config/: filament.php  l5-swagger.php  services.php
backend/docs/: alert_system_config.md  elderly_profile.md  fall_event.md  notifications.md
backend/routes/: api.php
config/: fedml_config.yaml
docs/: architecture.md  deployment.md  testing.md  troubleshooting.md
federated_learning/: test_client.py
mobile-app/: App.js  Dockerfile  README.md  app.json  package-lock.json  package.json  start.sh  tsconfig.json
notebooks/: Activity-window-streamlit.ipynb  Antivity-window-streamlit(2.0).ipynb  Binary-CNN - Pipeline-FineTuning.ipynb  Binary-CNN - Pipeline.ipynb  CNN (LSTM + SA).ipynb  CNN-LSTM.ipynb  CNN.ipynb  Data_Prep_CAGE.ipynb  Data_Prep_DL.ipynb  Untitled.ipynb  Untitled1.ipynb  binary_baseline_models.ipynb  processed_mobifall.ipynb  sample_fall_window.ipynb
notebooks/CNN/: Binary-CNN - Latest.ipynb  Binary-CNN - Pipeline.ipynb  Binary-CNN-LSTM.ipynb  Binary-CNN.ipynb  Binary-DeepConvLSTM.ipynb  Binary-Inception.ipynb  CNN(DS).ipynb  CNN-LSTM+SA.ipynb  CNN-LSTM.ipynb  CNN.ipynb  CNN_data_prep.ipynb  DeepConvLSTM.ipynb
notebooks/DL_lpf/: CNN self-Attention.ipynb
notebooks/DL_lpf_jitters/: CNN (LSTM + SA).ipynb  CNN-LSTM.ipynb  CNN.ipynb
notebooks/dataprep/: data_prep.ipynb  feature_extraction.ipynb  model_assessment_1.ipynb  modelling.ipynb  pipelines.ipynb  processed_mobifall.ipynb  processing_mobifall.ipynb
notebooks/modelling/: features_assessment.ipynb  model_assessment.ipynb  training_pipeline_notebook.ipynb
notebooks/raw_windows_test/: window_800_000_FALL.csv  window_800_001_FALL.csv  window_800_002_FALL.csv  window_800_003_ADL.csv  window_800_004_FALL.csv  window_800_005_FALL.csv  window_800_006_FALL.csv  window_800_007_ADL.csv  window_800_008_FALL.csv  window_800_009_FALL.csv  window_800_010_FALL.csv  window_800_011_FALL.csv  window_800_012_ADL.csv  window_800_013_FALL.csv  window_800_014_FALL.csv  window_800_015_FALL.csv  window_800_016_ADL.csv  window_800_017_FALL.csv  window_800_018_FALL.csv  window_800_019_FALL.csv  window_800_020_ADL.csv  window_800_021_FALL.csv  window_800_022_FALL.csv  window_800_023_FALL.csv  window_800_024_FALL.csv  window_800_025_FALL.csv  window_800_026_FALL.csv  window_800_027_FALL.csv  window_800_028_FALL.csv  window_800_029_FALL.csv  window_800_030_FALL.csv  window_800_031_FALL.csv  window_800_032_FALL.csv  window_800_033_FALL.csv  window_800_034_FALL.csv  window_800_035_FALL.csv  window_800_036_FALL.csv  window_800_037_FALL.csv  window_800_038_FALL.csv  window_800_039_FALL.csv  (+8885 more)
src/: main.py
src/ilab_group_12_1_fall_detection/: combining_annotated_data.py
streamlit-app/: app_3.py  notes  notes.md
streamlit-app/models/: cnn_model.h5  (+1 more)
swarm_learning/: Dockerfile  aggregator.py  docker-compose.yml  entrypoint.py  node.py  node_server.py
tests/: conftest.py  test_model_architecture.py  test_peer_communication.py  test_weight_sharing.py  unpack_pickle.py
(+101 files in other folders)
