[tool.poetry]
name = "ilab-group-12-1-fall-detection"
version = "0.1.0"
description = "Fall Detection with IoT and Swarm Learning"
authors = [
    "Rony Debnath <rony.debnathdebnath@student.uts.edu.au>",
    "Ratana Sovann <sovann.ratana@student.uts.edu.au>",
    "Sidhant Bajaj <sidhant.bajaj@student.uts.edu.au>",
    "Vishwas Singh <Vishwas.singh@student.uts.edu.au>",
    "Katherin Gomez Londono <katherin.a.gomezlondono@student.uts.edu.au>",
    "Drishya Chuke <drishya.l.chuke@student.uts.edu.au>"
]
readme = "README.md"
packages = [{ include = "ilab_group_12_1_fall_detection", from = "src" }]
# add any required dependencies like below
# dependencies = ["pandas", "scikit-learn"]

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^7.3.3"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
scipy = "^1.15.2"
flask = "^2.2.2"
requests = "^2.28.1"
tensorflow = "2.16.1"
numpy = "^1.26.4"
pyzmq = "^25.1.2"
fedml = "^0.9.6"
torch = "2.6.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
